# radar_arco

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: radar_analysis_ready_data.ipynb
production/: create_cfradial2_zarr.py
test/: create_cfradial1_kerchunk_https.py  create_cfradial1_kerchunk_https_virtualizarr.py  create_cfradial1_kerchunk_posix.py  create_cfradial1_kerchunk_posix_https_gdex.py  create_cfradial2_zarr.py  test.py  test_miss_value.ipynb  test_spol_precip.ipynb
